Refactor user overview to use the new API

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -14,6 +14,7 @@
 @import 'statistics';
 @import 'toolbar';
 @import 'tour';
+@import 'users';
 
 /* Plugin customizations */
 @import 'ember-power-calendar';
