--- a/app/users/edit/template.hbs
+++ b/app/users/edit/template.hbs
@@ -1,171 +1,62 @@
-{{#with model as |user|}}
-  <h1>{{user.fullName}} {{#link-to 'users.index' tagName='button' class='btn pull-right'}}Back{{/link-to}}</h1>
-  {{#unless user.isActive}}
-    <div class="alert alert-danger">
-      <strong>{{fa-icon 'warning'}}</strong> This user is inactive
-    </div>
-  {{else unless user.activeEmployment}}
-    <div class="alert alert-warning">
-      <strong>{{fa-icon 'warning'}}</strong> This user has no active employment
-    </div>
-  {{/unless}}
-  <div>
-    <div class="grid grid--12of12 grid-md--6of12">
-      <div class="grid-cell">
-        <div class="card">
-          <div class="card-header text-center">
-            <strong>User information</strong>
-          </div>
-          <div class="card-block">
-            <table class="table table--striped">
-              <tbody>
-                <tr>
-                  <td>Username:</td>
-                  <td class="text-right">{{user.username}}</td>
-                </tr>
-                <tr>
-                  <td>Email:</td>
-                  <td class="text-right">{{user.email}}</td>
-                </tr>
-                {{#if user.activeEmployment}}
-                  <tr>
-                    <td>Percentage:</td>
-                    <td class="text-right">{{user.activeEmployment.percentage}}%</td>
-                  </tr>
-                  <tr>
-                    <td>Worktime per day:</td>
-                    <td class="text-right">{{format-duration user.activeEmployment.worktimePerDay false}}</td>
-                  </tr>
-                {{/if}}
-                <tr>
-                  <td><strong>Worktime balance:</strong></td>
-                  <td class="text-right">
-                    <span class="worktime-balance {{balance-highlight-class user.worktimeBalance}}">
-                      {{format-duration user.worktimeBalance false}}
-                    </span>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-      <div class="grid-cell">
-        <div class="card">
-          <div class="card-header text-center">
-            <strong>Absences</strong>
-          </div>
-          <div class="card-block">
-            <table class="table table--striped table--absence-types">
-              <thead>
-                <tr>
-                  <th>
-                    <div class="grid grid--no-gutters grid--nowrap">
-                      <div class="grid-cell grid-cell--6of12">Type</div>
-                      <div class="grid-cell grid-cell--2of12">Credit</div>
-                      <div class="grid-cell grid-cell--2of12">Used</div>
-                      <div class="grid-cell grid-cell--2of12">Balance</div>
-                    </div>
-                  </th>
-                </tr>
-              </thead>
-              <tbody>
-                {{#each user.userAbsenceTypes as |absenceType|}}
-                  <tr
-                    class="{{if absenceType.absenceCredits.length 'pointer'}}"
-                    title="{{if absenceType.absenceCredits.length 'Click to toggle the composition of this credit'}}"
-                    {{action (toggle 'showCredits' absenceType) on='click'}}
-                  >
-                    <td>
-                      <div class="grid grid--no-gutters grid--nowrap">
-                        <div class="grid-cell grid-cell--6of12">{{absenceType.name}}</div>
-                        <div class="grid-cell grid-cell--2of12">
-                          {{#if absenceType.credit}}
-                            {{absenceType.credit}} day{{unless (eq absenceType.credit 1) 's'}}
-                          {{else}}
-                            -
-                          {{/if}}
-                        </div>
-                        <div class="grid-cell grid-cell--2of12">
-                          {{#if absenceType.usedDuration}}
-                            {{humanize-duration absenceType.usedDuration false}}
-                          {{else}}
-                            {{absenceType.usedDays}} day{{unless (eq absenceType.usedDays 1) 's'}}
-                          {{/if}}
-                        </div>
-                        <div class="grid-cell grid-cell--2of12">
-                          {{#if absenceType.balance}}
-                            {{absenceType.balance}} day{{unless (eq absenceType.balance 1) 's'}}
-                          {{else}}
-                            -
-                          {{/if}}
-                        </div>
-                      </div>
-                      {{#if absenceType.showCredits}}
-                        {{#each absenceType.absenceCredits as |credit|}}
-                          <div class="grid grid--no-gutters grid--nowrap credit-row">
-                            <div class="grid-cell grid-cell--6of12">{{credit.comment}}</div>
-                            <div class="grid-cell grid-cell--6of12">
-                              {{credit.days}} day{{unless (eq credit.days 1) 's'}}
-                            </div>
-                          </div>
-                        {{/each}}
-                      {{/if}}
-                    </td>
-                  </tr>
-                {{/each}}
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-      <div class="grid-cell">
-        <div class="card">
-          <div class="card-header text-center">
-            <strong>Supervisors</strong>
-          </div>
-          <div class="card-block">
-            {{#if user.supervisors}}
-              <table class="table table--striped">
-                <tbody>
-                  {{#each user.supervisors as |supervisor|}}
-                    <tr>
-                      <td>{{supervisor.fullName}}</td>
-                      <td class="text-right">{{supervisor.email}}</td>
-                    </tr>
-                  {{/each}}
-                </tbody>
-              </table>
-            {{else}}
-              <div class="text-center"><em>No supervisees</em></div>
-            {{/if}}
-          </div>
-        </div>
-      </div>
-      <div class="grid-cell">
-        <div class="card">
-          <div class="card-header text-center">
-            <strong>Supervisees</strong>
-          </div>
-          <div class="card-block">
-            {{#if user.supervisees}}
-              <table class="table table--striped">
-                <tbody>
-                  {{#each user.supervisees as |supervisee|}}
-                    <tr>
-                      <td>{{supervisee.fullName}}</td>
-                      <td class="text-right">{{supervisee.email}}</td>
-                    </tr>
-                  {{/each}}
-                </tbody>
-              </table>
-            {{else}}
-              <div class="text-center"><em>No supervisees</em></div>
-            {{/if}}
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-{{/with}}
+<header class="user-header">
+  <div class="user-header-info">
+    <small>
+      {{fa-icon 'map-marker'}} {{model.activeEmployment.location.name}},
+      {{humanize-duration model.activeEmployment.worktimePerDay}} a day
+      ({{model.activeEmployment.percentage}}%)
+    </small>
 
+    <h1>{{model.fullName}}</h1>
+  </div>
+
+  {{#if data.isRunning}}
+    <div class="user-header-loading">
+      {{loading-icon}}
+    </div>
+  {{else}}
+    <div class="user-header-worktime-balance-container">
+      <h2 class="user-header-worktime-balance-title">Worktime balance</h2>
+
+      <div class="user-header-worktime-balance-last-valid-timesheet">
+        {{#with data.lastSuccessful.value.worktimeBalanceLastValidTimesheet as |balance|}}
+          <h2 title="Last day with a valid timesheet">
+            {{moment-format balance.date 'DD.MM.YYYY'}}
+          </h2>
+          <div class="{{balance-highlight-class balance.balance}}">
+            {{format-duration balance.balance false}}
+          </div>
+        {{/with}}
+      </div>
+
+      <div class="user-header-worktime-balance">
+        {{worktime-balance-chart worktimeBalances=data.lastSuccessful.value.worktimeBalances}}
+      </div>
+
+      <div class="user-header-worktime-balance-today">
+        {{#with data.lastSuccessful.value.worktimeBalanceToday as |balance|}}
+          <h2>Today</h2>
+          <div class="{{balance-highlight-class balance.balance}}">
+            {{format-duration balance.balance false}}
+          </div>
+        {{/with}}
+      </div>
+    </div>
+
+    <div class="user-header-absence-balance-container">
+      {{#with data.lastSuccessful.value.absenceBalances as |balances|}}
+        {{#each balances as |balance index|}}
+          {{balance-donut balance
+            class = 'user-header-absence-balance'
+            title = balance.absenceType.name
+            index = index
+            count = balances.length
+          }}
+        {{/each}}
+      {{/with}}
+    </div>
+  {{/if}}
+</header>
+
+<section class="user-content">
+  {{!TODO}}
+</section>
