Add missing punctuation

--- a/app/components/async-list/template.hbs
+++ b/app/components/async-list/template.hbs
@@ -6,7 +6,7 @@
   <div class="empty">
     <div>
       {{fa-icon 'bolt'}}
-      <h3>Oops something went wrong</h3>
+      <h3>Oops... something went wrong</h3>
       <p>Have you tried turning it off and on again?</p>
     </div>
   </div>
