Improve async list error message

--- a/app/components/async-list/template.hbs
+++ b/app/components/async-list/template.hbs
@@ -6,8 +6,12 @@
   <div class="empty">
     <div>
       {{fa-icon 'bolt'}}
-      <h3>Oops... something went wrong</h3>
-      <p>Have you tried turning it off and on again?</p>
+      <h3>Oops... Something went wrong</h3>
+      <p>
+        Have you tried turning it off and on again?
+        <br>
+        Please try refreshing the page.
+      </p>
     </div>
   </div>
 {{else if (not data.last.value.length)}}
