--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -14,6 +14,7 @@
 @import 'statistics';
 @import 'toolbar';
 @import 'tour';
+@import 'users-navigation';
 @import 'users';
 
 /* Plugin customizations */
