--- a/app/users/edit/template.hbs
+++ b/app/users/edit/template.hbs
@@ -54,9 +54,10 @@
 <nav class="user-navigation">
   <ul>
     <li>{{#link-to 'users.edit.index' model.id}}General{{/link-to}}</li>
+    <li>{{#link-to 'users.edit.credits' model.id}}Credits{{/link-to}}</li>
   </ul>
 </nav>
 
 <section class="user-content">
-  {{outlet}}
+  {{liquid-outlet}}
 </section>
