Add initial user profile responsibilities tab

--- a/app/users/edit/template.hbs
+++ b/app/users/edit/template.hbs
@@ -55,6 +55,7 @@
   <ul>
     <li>{{#link-to 'users.edit.index' model.id}}General{{/link-to}}</li>
     <li>{{#link-to 'users.edit.credits' model.id}}Credits{{/link-to}}</li>
+    <li>{{#link-to 'users.edit.responsibilities' model.id}}Responsibilities{{/link-to}}</li>
   </ul>
 </nav>
 
