Add missing sidenav item

--- a/app/components/sy-sidenav/template.hbs
+++ b/app/components/sy-sidenav/template.hbs
@@ -26,6 +26,11 @@
       {{/link-to}}
     </li>
     <li class="nav-side-list-item">
+      {{#link-to 'statistics'}}
+        {{fa-icon 'bar-chart'}} Statistics
+      {{/link-to}}
+    </li>
+    <li class="nav-side-list-item">
       {{#link-to 'users'}}
         {{fa-icon 'users'}} Users
       {{/link-to}}
