Make profile a direct redirect instead of an own route

--- a/app/components/sy-sidenav/template.hbs
+++ b/app/components/sy-sidenav/template.hbs
@@ -16,7 +16,7 @@
       {{/link-to}}
     </li>
     <li class="nav-side-list-item">
-      {{#link-to 'me'}}
+      {{#link-to 'users.edit' user.id}}
         {{fa-icon 'user'}} Profile
       {{/link-to}}
     </li>
@@ -31,7 +31,7 @@
       {{/link-to}}
     </li>
     <li class="nav-side-list-item">
-      {{#link-to 'users'}}
+      {{#link-to 'users.index'}}
         {{fa-icon 'users'}} Users
       {{/link-to}}
     </li>
