--- a/app/components/sy-calendar/styles.scss
+++ b/app/components/sy-calendar/styles.scss
@@ -4,6 +4,18 @@
   .ember-power-calendar-nav-control {
     color: var(--color-primary);
     cursor: pointer;
+
+  }
+
+  .nav-select-month,
+  .nav-select-year {
+    position: relative;
+
+    select {
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      opacity: 0;
+    }
   }
 
   .ember-power-calendar-day {
@@ -24,4 +36,10 @@
       }
     }
   }
+}
+
+&.sy-datepicker {
+  border: 1px solid var(--color-border);
+  padding: 0.5rem;
+  box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
 }
