--- a/app/components/sy-datepicker-btn/template.hbs
+++ b/app/components/sy-datepicker-btn/template.hbs
@@ -1,23 +1,15 @@
-{{#basic-dropdown
-  horizontalPosition = 'right'
-  verticalPosition   = 'below'
-  as |dd|
-}}
+{{#basic-dropdown horizontalPosition='auto-right' as |dd|}}
   {{#dd.trigger tagName='button' class='btn btn-default'}}
     {{fa-icon 'calendar'}}
   {{/dd.trigger}}
 
   {{#dd.content renderInPlace=true}}
-    {{#sy-calendar
+    {{sy-calendar
       center         = center
       selected       = value
-      class          = 'sy-datepicker-picker'
+      class          = 'sy-datepicker'
       onCenterChange = (action (mut center) value='moment')
-      onSelect       = (action 'change' value='moment')
-      as |calendar|
+      onSelect       = (action on-change value='moment')
     }}
-      {{calendar.nav}}
-      {{calendar.days}}
-    {{/sy-calendar}}
   {{/dd.content}}
 {{/basic-dropdown}}
