Migrate no-permission template to a component

--- a/app/users/edit/credits/overtime-credits/edit/template.hbs
+++ b/app/users/edit/credits/overtime-credits/edit/template.hbs
@@ -36,7 +36,7 @@
   {{else}}
     <div class="grid">
       <div class="grid-cell">
-        {{render 'no-permission'}}
+        {{no-permission}}
       </div>
     </div>
   {{/if}}
