--- a/app/users/edit/credits/absence-credits/edit/template.hbs
+++ b/app/users/edit/credits/absence-credits/edit/template.hbs
@@ -41,7 +41,7 @@
   {{else}}
     <div class="grid">
       <div class="grid-cell">
-        {{render 'no-permission'}}
+        {{no-permission}}
       </div>
     </div>
   {{/if}}
