Remove useless renderInPlace on datepicker button

--- a/app/components/sy-datepicker-btn/template.hbs
+++ b/app/components/sy-datepicker-btn/template.hbs
@@ -3,7 +3,7 @@
     {{fa-icon 'calendar'}}
   {{/dd.trigger}}
 
-  {{#dd.content renderInPlace=true}}
+  {{#dd.content}}
     {{sy-calendar
       center         = center
       selected       = value
