Mark all option as selected when year is empty

--- a/app/users/edit/credits/index/template.hbs
+++ b/app/users/edit/credits/index/template.hbs
@@ -9,7 +9,7 @@
         {{#each years as |y|}}
           <option value={{y}} selected={{eq y year}}>{{y}}</option>
         {{/each}}
-        <option>All</option>
+        <option value="" selected={{not year}}>All</option>
       </select>
     {{/with}}
   </div>
