Pass missing cost center options on reschedule page

--- a/app/reschedule/template.hbs
+++ b/app/reschedule/template.hbs
@@ -2,6 +2,7 @@
 
 {{report-filter
   billingTypes  = billingTypes
+  costCenters   = costCenters
   initial       = (hash
     customer    = _customer
     project     = _project
