--- a/app/protected/template.hbs
+++ b/app/protected/template.hbs
@@ -1,13 +1,15 @@
-{{sy-sidenav on-logout=(route-action 'invalidateSession')}}
+<div class="nav-side-wrapper">
+  {{sy-sidenav on-logout=(route-action 'invalidateSession')}}
 
-<main class="page-main">
-  {{#if loading}}<span class="loader"></span>{{/if}}
-  <div class="page-wrapper">
-    <div class="page-content page-content--scroll">
-      {{outlet}}
+  <main class="page-main">
+    {{#if loading}}<span class="loader"></span>{{/if}}
+    <div class="page-wrapper">
+      <div class="page-content page-content--scroll">
+        {{outlet}}
+      </div>
     </div>
-  </div>
-</main>
+  </main>
+</div>
 
 {{welcome-modal
   visible  = visible
