--- a/app/users/edit/credits/absence-credits/edit/template.hbs
+++ b/app/users/edit/credits/absence-credits/edit/template.hbs
@@ -26,7 +26,7 @@
               {{f.input type='number' label='Days' name='days'}}
               {{f.input type='text' label='Comment' name='comment'}}
               <div class="text-right">
-                {{#link-to 'users.edit.credits.index' user.id tagName='button' class='btn'}}Cancel{{/link-to}}
+                {{#link-to 'users.edit.credits.index' user.id class='btn'}}Cancel{{/link-to}}
                 {{#unless credit.isNew}}
                   <button type="button" class="btn btn-danger {{if delete.isRunning 'loading'}}" {{action (perform delete) credit}}>Delete</button>
                 {{/unless}}
