Add consistent empty states in the profile

--- a/app/users/edit/credits/index/template.hbs
+++ b/app/users/edit/credits/index/template.hbs
@@ -57,7 +57,7 @@
         {{^}}
           <div class="card-block empty">
             <div>
-              {{fa-icon 'calendar-o'}}
+              {{fa-icon 'calendar-plus-o'}}
               <p>
                 No absence credits found...<br>
                 {{#if (can 'create absence-credit')}}
